<resources>
    <string name="app_name">dinnerSystem</string>
    <string name="enter_cashiers_phone_number">Enter Cashiers Phone Number</string>
    <string name="enter_printer_number">Enter Printer Number</string>
    <string name="login_wifi">login_wifi</string>
    <string name="no_event">no event</string>
    <string name="please_choose_language">Please choose language</string>
    <string name="register_device">Register Device</string>
    <string name="test_tools">Test Tools</string>
    <string name="kiosk_mode">Kiosk mode</string>
    <string name="update">Update</string>
    <string name="network">Network</string>
    <string name="printing">Printing</string>
    <string name="send_log">Send Log</string>
    <string name="dashboard">Dashboard</string>
    <string name="language">Language</string>
    <string name="waiting_for_network">waiting for network...</string>
    <string name="getting_reasons">Please wait.  Getting reasons...</string>
    <string name="getting_info">Please wait.  Getting info...</string>
    <string name="no_user">No User!</string>
    <string name="unknown_event">Unknown Event!</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="prepay">Prepay</string>
    <string name="anonymous">Anonymous</string>
    <string name="card">Card</string>
    <string name="mm_yy" translatable="false">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="check_number">Check Number</string>
    <string name="honoree">Honoree</string>
    <string name="enter_any_of_the_above_information">Enter any of the above information</string>
    <string name="Please_press_the_Confirm_button">Please press the Confirm button...</string>
    <string name="Please_enter_new_Payment_Or_clear">Please enter new Payment, Or clear.</string>
    <string name="Payment_Error">Payment Error</string>
    <string name="Approved">Approved</string>
    <string name="Thank_You">Thank You!</string>
    <string name="Declined">Declined!</string>
    <string name="Unknown_Error">Unknown Error.</string>
    <string name="Finalizing">Finalizing...</string>
    <string name="No_Network">No Network</string>
    <string name="waiting_for_printer">waiting for printer</string>
    <string name="Cannot_connect_to_Printer">Cannot connect to Printer</string>
    <string name="Check_Printer_or_Choose_other_Printer">Check Printer or Choose other Printer.</string>
    <string name="No_User">No User</string>
    <string name="No_Event">No Event!</string>
    <string name="Creating_Receipts">Creating Receipts...</string>
    <string name="Sending_to_Printer">Sending to Printer...</string>
    <string name="Error_Printing">Error Printing</string>
    <string name="Processed">Processed</string>
    <string name="Receipt">Receipt.</string>
    <string name="Trying_to_connect_to">Trying to connect to</string>
    <string name="Successful_connected_to">Successful connected to</string>
    <string name="Failed_to_connect_to">Failed to connect to</string>
    <string name="Processing">Processing...</string>
    <string name="Account_Error">Account Error</string>
    <string name="Please_reenter_Phone_Number">Please reenter Phone Number.</string>
    <string name="Enter_Expiration_Date">Enter Expiration Date: MM/YY</string>
    <string name="Enter_CVV">Enter CVV</string>
    <string name="Enter_check_number">Enter check number</string>
    <string name="menu_please_enter_a_number_to_choose">Menu, Please enter a number to choose:</string>
    <string name="log_out">Log Out.</string>
    <string name="clear">Clear</string>
    <string name="reason">Reason</string>
    <string name="monthly_payments">Monthly Payments</string>
    <string name="charidy_anonymous">Charidy Anonymous</string>
    <string name="Version">Version</string>
    <string name="settings">Settings</string>
</resources>
