<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="35dp"
    android:paddingEnd="35dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/login_wifi"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/wifi0"
            android:contentDescription="@string/login_wifi" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_ecentname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/no_event"
        android:textSize="28sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/enter_cashiers_phone_number"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/cashier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:inputType="number|phone"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_printer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/enter_printer_number"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/printer_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="190dp"
        android:layout_marginRight="190dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/login_Getting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>